# Bount

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/game-studio/: build.cmake
apps/game-studio/include/: app.hpp  gl_canvas.hpp
apps/game-studio/src/: app.cpp  gl_canvas.cpp  main.cpp
apps/item-database/: build.cmake
apps/map-editor/: build.cmake
apps/mechanic-scripter/: build.cmake
apps/skill-crafter/: build.cmake
apps/ui-designer/: build.cmake
apps/unit-modeller/: build.cmake
cmake-scripts/: cmake-portable.cmake  glew.cmake
dev/include/bount-design-patterns/: singleton.hpp
dev/include/bount-engine/interfaces/: system.hpp
dev/include/bount-filesystem/: file.hpp  path.hpp
dev/include/bount-gl/: system.hpp  vertex.hpp
dev/include/bount-gl/model/: object.hpp
dev/include/bount-gl/model/formats/: obj.hpp
dev/include/bount-gpu/shader/: program.hpp  resource.hpp  type.hpp
dev/include/bount-lib/core/: api.hpp  precompiled.hpp
dev/include/bount-lib/gl/: api.hpp  precompiled.hpp
dev/include/bount-lib/gpu/: api.hpp  precompiled.hpp
dev/include/bount-lib/standard/: macros.hpp
dev/include/bount-types/: bool.hpp  byte.hpp  char.hpp  float.hpp  int.hpp  string.hpp  types.hpp  uint.hpp
dev/src/bount-filesystem/: dir.cpp  path.cpp
dev/src/bount-gl/: system.cpp
dev/src/bount-gl/model/formats/: obj.cpp
dev/src/bount-gpu/shader/: program.cpp  resource.cpp
tests/wxWidgets/window/: main.cpp
